# cuRDF

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: docs.yml
benchmarks/: __init__.py  alt_methods.py  benchmark.py  plotting.py
benchmarks/results/: results.csv
benchmarks/results/structure_example_frames/: frame_100.xyz  frame_1000.xyz  frame_10000.xyz  frame_2000.xyz  frame_20000.xyz  frame_250.xyz  frame_2500.xyz  frame_3000.xyz  frame_4000.xyz  frame_500.xyz  frame_5000.xyz  frame_750.xyz  frame_7500.xyz
curdf/: adapters.py  cli.py  rdf.py
docs/: api.md  index.md  quickstart.md
docs/source/: api.md  conf.py  index.rst  quickstart.md
examples/: ase_workflow.py  basic_usage.py  mdanalysis_workflow.py
tests/: conftest.py  test_rdf.py  test_water_rdfs.py
tests/cuRDF_results/: rdf_HH.csv  rdf_OH.csv  rdf_OO.csv
