[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuRDF"
description = "GPU-accelerated radial distribution functions using Toolkit-Ops + PyTorch with MDAnalysis and ASE adapters."
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "nvalchemiops",
  "MDAnalysis",
  "ase",
  "matplotlib",
  "pytest",
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
]

[project.scripts]
curdf = "curdf.cli:main"
