[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuRDF"
description = "GPU-accelerated radial distribution functions using Toolkit-Ops + PyTorch with MDAnalysis and ASE adapters."
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "nvalchemi-toolkit-ops",
  "MDAnalysis",
  "ase",
  "matplotlib",
  "pytest",
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
]

[project.scripts]
curdf = "curdf.cli:main"
